--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,14 +19,15 @@
       <main>
         {{ content }}
       </main>
-      <aside>
+      <!--<aside>
         <div class="strava-card">
           <div class="card-header">
             <h3>Strava</h3>
           </div>
           <div class="card-body"></div>
         </div>
-      </aside>
+      </aside>  -->
+
     </div>
     
     <script src="/assets/js/main.js"></script>
