--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <a class="btn btn-twitter" href="https://twitter.com/krishnadevz" target="_blank" rel="noopener">
       Twitter
     </a>
-    <a class="btn btn-github" href="" target="_blank">
+    <a class="btn btn-github" href="https://github.com/krishnadevz" target="_blank">
       Github
     </a>
   </div>
