--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-  <h1>Krishna kakade<span></span></h1>
+  <h1>Krishna kakade<span>🐱‍💻</span></h1>
   
   <div class="follow-btns">
     <a class="btn btn-twitter" href="https://twitter.com/krishnadevz" target="_blank" rel="noopener">
